# wayland

./: .gitignore  CMakeLists.txt  README.md  refresh.sh
cmake/: gen_protocol.cmake
libexpat/: CMakeLists.txt
libffi/: CMakeLists.cmake  CMakeLists.txt  fficonfig.h.cmake
libxml2/: CMakeLists.txt
wayland-cmake/: CMakeLists.cmake  cmake_uninstall.cmake.in  config.h.in  open_memstream.c
wayland-cmake/host/: host-CMakeLists.cmake  host-build.cmake
wayland-cmake/patches/: 0001-fix-undefined-symbols-before-android24.patch  0001-use-TMPDIR-when-XDG_RUNTIME_DIR-is-unset-in-android.patch  0001-use-android-liblog.patch
wayland-cmake/protocol/: CMakeLists.cmake
